<resources>
    <string name="app_name" translatable="false">Rumpel</string>

    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log out</string>
    <string name="nav_about">About</string>

    <string name="author_email" translatable="false">marcos.chamosa.r@gmail.com</string>
    <string name="author_name" translatable="false">Marcos Chamosa</string>
    <string name="author_contact">Contact</string>
    <string name="author">Author</string>
    <string name="developer">Developer</string>


    <string name="about_powered_by">Powered by Android, Java, and Kotlin</string>
    <string name="about_dialog_ok" translatable="false">OK</string>

    <string name="failed_to_authenticate">Failed to authenticate, revise your credentials</string>

    <string name="passwords_dont_match">Passwords do not match, please revise</string>

    <string name="version" translatable="false">v1.0</string>
    <string name="nav_payment_methods">Payment methods</string>
    <string name="nav_budgets">Budgets</string>
    <string name="nav_tags">Tags</string>
    <string name="add_bill">Add bill</string>

    <string name="add_item_bill">Add item</string>
    <string name="pick_a_date_hint">Pick a date…</string>

    <string name="ellipsis" translatable="false">…</string>
    <string name="pick_date">Pick date</string>
    <string name="item_bill_txt">Item name…</string>
    <string name="item_bill_price">Iteam price…</string>
    <string name="default_item_price" translatable="false">0.00</string>
    <string name="item_bill_check">Item bills must have a name and a price</string>
    <string name="item_bill_price_decimal_check">Prices can only have two decimal numbers</string>
    <string name="add_bill_error">Cannot add bills without items</string>
    <string name="insert_item">Insert item</string>
    <string name="modify_item">Modify item</string>

    <string name="add_bill_names_missing_error">There are bill items without name. Please revise.</string>
    <string name="add_bill_price_missing_error">There are bill items without price. Please revise.</string>
    <string name="total">Total:</string>

    <string name="long_press_to_activate">Please press and hold to edit or delete this record</string>
    <string name="btn_scan_bill">Scan bill</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>

    <string name="permission_cam_required">Permission to use camera is required</string>

    <string name="bill_added">Bill added</string>
    <string name="pm_error">Can\'t have a payment method of less than 3 characters</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start date</string>
    <string name="soft_limit">Soft limit</string>
    <string name="hard_limit">Hard limit</string>
    <string name="insert_budget">Insert budget</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_comma">Welcome, </string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="not_an_user_yet">Not an user yet?</string>
    <string name="rumpel">Rumpel</string>
    <string name="username">Username</string>
    <string name="repeat_password">Repeat password</string>
    <string name="already_an_user">Already an user?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="show_password">Show password</string>
    <string name="new_pm_name">Name for the payment method…</string>
    <string name="insert_payment_method">Insert payment method</string>
    <string name="name_for_the_tag">Name for the tag…</string>
    <string name="insert_tag">Insert tag</string>
    <string name="hide_password">Hide password</string>
    <string name="hello">Hi there,</string>
    <string name="create_an_account">Create an account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="or">or</string>
    <string name="menu">Menu</string>
    <string name="add_pm">Add payment method</string>
    <string name="add_tag">Add tag</string>
    <string name="interval">Interval</string>
    <string name="limits">Limits</string>
    <string name="currency">Currency</string>
    <string name="universal">Universal</string>
    <string name="add_budget">Add budget</string>
    <string name="pm">Payment method</string>
    <string name="empty_credentials">Please fill out the credentials first</string>
    <string name="empty_fields_error">Please fill out all fields</string>
    <string name="new_tag">New tag</string>
    <string name="tag_name">Tag name</string>
    <string name="modify_tag">Modify tag</string>
    <string name="modify_method">Modify method</string>
    <string name="new_pm">New method</string>
    <string name="method_name">Method name</string>
    <string name="new_budget">New budget</string>
    <string name="modify_budget">Modify budget</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="choose_currency">Choose currency</string>

</resources>