<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/general_padding">

    <EditText
        android:id="@+id/edit_text_pm_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/item_bill_txt"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_text_item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_below="@id/edit_text_pm_name"
        android:hint="@string/item_bill_price"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_pm_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_item_price"
        android:text="@string/insert_item" />
</RelativeLayout>