<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/general_padding">

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_start_date"
            android:layout_width="@dimen/no_size"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/date_margin"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="@string/pick_a_date_hint"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/date_txt_size" />

        <Button
            android:id="@+id/btn_pick_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:maxWidth="@dimen/max_date_btn_size"
            android:minWidth="@dimen/min_date_btn_size"
            android:text="@string/start_date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_end_date"
            android:layout_width="@dimen/no_size"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/date_margin"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="@string/pick_a_date_hint"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/date_txt_size" />

        <Button
            android:id="@+id/btn_pick_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:maxWidth="@dimen/max_date_btn_size"
            android:minWidth="@dimen/min_date_btn_size"
            android:text="@string/end_date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_2"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_soft_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/soft_limit"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edit_text_hard_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hard_limit"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_pm_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_3"
        android:text="@string/insert_budget" />
</RelativeLayout>