<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/general_padding"
    tools:context=".ui.activities.AddBillActivity">

    <LinearLayout
        android:id="@+id/linear_layout_bill_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bill_date_view"
            android:layout_width="@dimen/no_size"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/date_margin"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="@string/pick_a_date_hint"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/date_txt_size" />

        <Button
            android:id="@+id/btn_pick_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:maxWidth="@dimen/max_date_btn_size"
            android:minWidth="@dimen/min_date_btn_size"
            android:text="@string/pick_date" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_2nd_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_bill_id"
        android:orientation="horizontal"
        android:padding="@dimen/about_padding">

        <Button
            android:id="@+id/btn_scan_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_gravity="center_horizontal"
            android:maxWidth="@dimen/max_date_btn_size"
            android:minWidth="@dimen/min_date_btn_size"
            android:text="@string/btn_scan_bill" />

        <View
            android:layout_width="@dimen/no_size"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.4"
            android:maxWidth="@dimen/max_date_btn_size"
            android:minWidth="@dimen/min_date_btn_size"
            android:text="@string/add_item_bill" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_bill_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/date_list_view_height"
        android:layout_below="@id/linear_layout_2nd_row"
        android:layout_marginBottom="@dimen/date_listview_margin"
        android:visibility="gone">
    </ListView>

    <TextView
        android:id="@+id/txt_view_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_bill_id"
        android:text="@string/total"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/add_bill_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/add_bill" />

</RelativeLayout>